<resources>
    <string name="app_name">CompFoodie</string>
    <!-- Passing via Intent -->
    <string name="currentUserKey">currentUser</string>
    <string name="currentGroupKey">currentGroup</string>
    <string name="currentGroupIDKey">currentGroupId</string>
    <!-- SharedPreferences Key -->
    <string name="user_name">name</string>
    <string name="user_picURL">picURL</string>
    <string name="user_groups">groups</string>

    <!-- Create Group Activity -->
    <string name="create_group_title">Create a Group</string>
    <string name="location_title">Meetup Location</string>
    <string name="location_hint">Where do you want to meet to order?</string>
    <string name="party_size_title">Party Size</string>
    <string name="party_size_hint">Order with max how many people?</string>
    <string name="wait_time_title">Order Time</string>
    <string name="wait_time_hint">When will you order?</string>
    <string name="order_time_picker_description">Order Time Picker</string>
    <string name="message_title">Short Message</string>
    <string name="message_hint">Want to order sushi? (Max: 250 chars)</string>
    <string name="create_button_text">Create</string>
    <!-- Status Activity -->
    <string name="my_groups_item_title">My Groups</string>
    <string name="group_status_title">Group Status</string>
    <string name="party_title">Members</string>
    <!-- Login -->
    <string name="facebook_app_id">1841426099410747</string>
    <string name="login_toolbar_title">Login</string>
    <string name="login_title">CompFoodie</string>
    <string name="login_alert_text">You need to update Google Play Services</string>
    <!-- Browse -->
    <string name="browse_toolbar_title">Browse</string>
    <string name="browse_no_groups">No open groups found. Make one!</string>
    <!-- My Groups -->
    <string name="my_groups_toolbar_title">My Groups</string>
    <string name="my_groups_no_groups">You are not in any groups. Make one!</string>
    <!-- Toolbar -->
    <string name="user_display_item_title">User</string>
    <string name="add_group_item_title">Add Group</string>
    <!-- Drawer -->
    <string name="drawer_logout_title">Logout</string>
    <string name="default_user_name">Name</string>
    <!-- Group Adapter -->
    <string name="creator_pic_description">Creator Profile Picture</string>
    <!-- User Info -->
    <string name="user_pic_description">User Profile Picture</string>
</resources>
