<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs.tufts.edu.compfoodie.GroupStatusActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/group_status_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="10dp" />

    <RelativeLayout
        android:layout_below="@+id/group_status_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/location_title"
            android:text="@string/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:id="@+id/location_output"
            android:layout_below="@+id/location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="3dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/order_time_title"
            android:layout_below="@+id/location_output"
            android:text="@string/wait_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:id="@+id/order_time_output"
            android:layout_below="@+id/order_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="3dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:textColor="@color/textColorSecondary"/>

        <TextView
            android:id="@+id/message_title"
            android:layout_below="@+id/order_time_output"
            android:text="@string/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:id="@+id/message_output"
            android:layout_below="@+id/message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingLeft="3dp"
            android:textSize="18sp"
            android:maxLines="5" />

        <TextView
            android:id="@+id/party_title"
            android:layout_below="@+id/message_output"
            android:text="@string/party_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:id="@+id/party_count_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_output"
            android:layout_toEndOf="@+id/party_title"
            android:layout_toRightOf="@+id/party_title"
            android:paddingTop="5dp"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            android:textColor="@color/textColorSecondary" />

        <ListView
            android:id="@+id/party_list"
            android:layout_below="@+id/party_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingStart="3dp"
            android:paddingLeft="3dp" >

        </ListView>

    </RelativeLayout>

</RelativeLayout>

